--- a/templates/index.html
+++ b/templates/index.html
@@ -156,14 +156,22 @@
     <!-- END Scattered Polaroids Gallery -->
 
     <h2 class="text-center home-title">Welcome to Starbex</h2>
+    <h3 class="text-center">
+        <audio autoplay id="player" src="../media/audio/Image.mp3"></audio>
+
+        <a onclick="document.getElementById('player').play()"><span
+                class="glyphicon glyphicon-play-circle" ></span></a>
+        <a onclick="document.getElementById('player').pause()"><span class="glyphicon glyphicon-pause"></span></a>
+        <a onclick="document.getElementById('player').muted=!document.getElementById('player').muted">
+            <span class="glyphicon glyphicon-volume-off"></span></a>
+    </h3>
     <p class="text-center home-info">
-        <b>Starbex</b> is your local coffee shop with a twist. We offer <a href="/prices" style="color:#317eac">monthly subscription packages</a> for coffees which come with many benefits.
-        Our aim is to integrate the community online and in store with our friendly and sociable environment filled with regulars.
-<br><br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur.
+        <b>Starbex</b> is your local coffee shop with a twist. We offer <a href="/prices" style="color:#317eac">monthly
+        subscription packages</a> for coffees which come with many benefits.
+        Our aim is to integrate the community online and in store with our friendly and sociable environment filled with
+        regulars. From <a href="/blog" style="color:#317eac">Blogs</a> and <a href="/forum" style="color:#317eac">Forums</a> to Personalised coffees, <b>Starbex</b> provides a unique service to our loyal
+        customers. <br><br>...So what are you waiting for? Come and have a look around our website!
+        <br>
     </p>
     <p class="text-center buypagelink home-announcements">
         Keep up to date with our announcements <a href="/threads/10/"><b>here</b></a>.
