--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starbex</title>
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/font-awesome-4.7.0/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-    <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico"/>
 
-    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/normalize.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/normalize.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}"/>
     <script src="{% static "js/polaroid-js/modernizr.min.js" %}"></script>
     <script src="{% static "js/jquery.js" %}"></script>
     <script src="{% static "js/polaroid-js/classie.js" %}"></script>
@@ -26,47 +26,52 @@
 </head>
 <body>
 
-    <div class="masthead navbar-fixed-top">
+<div class="masthead navbar-fixed-top">
 
-        <div class="navbar-header header1">
-            <div class="pull-right">
-                <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pinterest-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-share-alt-square" aria-hidden="true"></i></a>
-            </div>
+    <div class="navbar-header header1">
+
+        <div class="pull-right">
+            <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-pinterest-square" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-share-alt-square" aria-hidden="true"></i></a>
         </div>
+    </div>
 
-        <div class="navbar-header">
+    <div class="navbar-header">
 
-          <button type="button" class="navbar-toggle mobile-nav" data-toggle="collapse" data-target="#myNavbar">
+        <button type="button" class="navbar-toggle mobile-nav" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand starbex" href="/"><i class="fa fa-coffee" aria-hidden="true"></i> Starbex</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
+        </button>
+        <a class="navbar-brand starbex" href="/"><i class="fa fa-coffee" aria-hidden="true"></i> Starbex</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
 
-            <ul class="nav nav-pills pull-left">
-                <li><a class="options" href="/about/">About</a></li>
-                <li><a class="options" href="/prices/">Prices</a></li>
-                <li><a class="options" href="/coffees/">Buy</a></li>
-                <li><a class="options" href="/blog/">Blog</a></li>
-                <li><a class="options" href="/forum/">Forum</a></li>
-                <li><a class="options" href="/contact/">Contact</a></li>
-            </ul>
+        <ul class="nav nav-pills pull-left">
+            <li><a class="options" href="/about/">About</a></li>
+            <li><a class="options" href="/prices/">Prices</a></li>
+            <li><a class="options" href="/coffees/">Buy</a></li>
+            <li><a class="options" href="/blog/">Blog</a></li>
+            <li><a class="options" href="/forum/">Forum</a></li>
+            <li><a class="options" href="/contact/">Contact</a></li>
+        </ul>
 
-            <ul class="nav nav-pills pull-right">
-                {% if user.is_authenticated %}
-                    <li><a class="options" href="{% url 'profile' %}"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-                    <li><a class="options" href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
-                {% else %}
-                    <li><a class="options" href="{% url 'register' %}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                    <li><a class="options" href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-                {% endif %}
-            </ul>
-        </div>
+        <ul class="nav nav-pills pull-right">
+            {% if user.is_authenticated %}
+                <li><a class="options" href="{% url 'profile' %}"><span class="glyphicon glyphicon-user"></span> Profile</a>
+                </li>
+                <li><a class="options" href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-in"></span> Log
+                    Out</a></li>
+            {% else %}
+                <li><a class="options" href="{% url 'register' %}"><span class="glyphicon glyphicon-user"></span>
+                    Register</a></li>
+                <li><a class="options" href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Log In</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
 
     {% if messages %}
         <div class="alert alert-success">
@@ -77,22 +82,22 @@
             </div>
         </div>
     {% endif %}
-   </div>
+</div>
 
 
 <div class="container">
 
 
-   <div class="container">
-       {% block content %}
-       {% endblock %}
-   </div>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 
-   <hr>
+    <hr class="hr-footer">
 
-   <div class="footer">
-       <p> Rebecca Manning &copy; <i>Coffee-righted</i></p>
-   </div>
+    <div class="footer">
+        <p> Rebecca Manning &copy; <i>Coffee-righted</i></p>
+    </div>
 </div>
 </body>
 
