--- a/templates/price.html
+++ b/templates/price.html
@@ -82,7 +82,7 @@
         </tbody>
     </table>
     <hr>
-    <p class="text-center buypagelink">Like what you see? Head on over to our buy page <a href="/coffees"><b>here</b></a>.
+    <p class="text-center buypagelink stretch">Like what you see? Head on over to our buy page <a href="/coffees"><b>here</b></a>.
         Don't forget to create an account first!</p>
     <hr>
     <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below and one of our team will get back to you as soon as possible.
