--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,7 @@ body > .container {
 
 a {
     color: #333333;
+    outline:none !important;
 }
 
 a:hover, a:focus {
@@ -165,24 +166,140 @@ a:hover, a:focus {
 
 /************ ABOUT *************/
 img.members {
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
     border-radius: 100px;
-    border: thick forestgreen solid;
+    border: medium rgba(139, 69, 19, 0.69) solid;
+    margin: 0 20px 0 0;
 }
 
 .about-members {
     margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 0 10%;
 }
 
-.about-members > div {
+@media (max-width: 1000px) {
+    .about-members {
+        padding: 0;
+    }
+}
+
+.about-members>div {
+    margin: 0 2% 15px 2%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.about-members>div>div>h1 {
+    color: #333;
+}
+
+@media (max-width: 500px) {
+    .about-members>div>div>p {
+        display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    .about-members>div {
+        justify-content: flex-start;
+    }
+}
+
+.personal-coffee {
+    background-color: rgba(139, 69, 19, 0.4);
+    padding: 5px 0;
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    color: white !important;
+}
+
+.personal-coffee>div>h2, .choices-coffee>div>h2 {
+    color: white !important;
+    font-family: 'Indie Flower', cursive;
+}
+
+.panel-body, .panel-heading {
+    color: #333333 !important;
+}
+
+.panel-heading {
+    background-color: rgba(139, 69, 19, 0.7) !important;
+    color: rgba(255, 255, 255, 0.6)!important;
+}
+
+.panel-heading:hover,.panel-heading:hover>h4>a,.panel-heading>h4>a {
+    color: rgba(255, 255, 255, 0.9)!important;
+}
+
+.panel-heading:hover {
+    background-color: rgba(139, 69, 19, 0.9) !important;
+}
+
+.panel-default {
+    border: 0;
+}
+
+.choices-coffee {
+    background-color: rgba(139, 69, 19, 0.7);
+    padding: 5px 15px 20px 15px;
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    margin-top: 20px;
+    color: white !important;
+}
+
+.tab-content {
+    background-color: white;
+}
+
+.tab-content>div>h3 {
+    margin: 0;
+}
+
+.choices-coffee-info {
+    border-radius: 5px;
+    padding: 10px;
+    margin: 15px 0;
+    background-color: white;
+}
+
+.choices-coffee-info>div>div>h3 {
+    color: #333333;
+    padding-top: 10px;
+}
+
+.choices-coffee-info>ul>li {
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    background-color: rgba(139, 69, 19, 0.4);
+    border-radius: 100%;
+}
+
+.choices-coffee-info>ul>li:active, .choices-coffee-info>ul>li:focus, .choices-coffee-info>ul>li:hover {
+    width: 15px;
+    height: 15px;
+    margin: 5px 5px 0 5px;
+    background-color: rgba(139, 69, 19, 0.4);
+    border-radius: 100%;
+}
+
+.nav-pills {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
 }
 
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
+    background-color: transparent;
+}
+
+.nav>li>a:hover, .nav>li>a:focus {
+    background-color: transparent;
+}
 /************ PRICES *************/
 .Price-img {
     background: url('../../media/images/Coffee1.jpg') no-repeat;
