--- a/templates/About.html
+++ b/templates/About.html
@@ -1,41 +1,166 @@
 {% extends 'base.html' %}
 {% block content %}
+
     <div class="about-members">
-    <div class="col-md-2"></div>
-    <div class="col-md-2">
-        <img class="members" src="../media/images/Barista1.jpg">
-        <h1>
-            Bex Manning
-        </h1>
-        <p>
-            Founder of Starbex.
-        </p>
-    </div>
-        <div class="col-md-1"></div>
-    <div class="col-md-2">
-        <img class="members" src="../media/images/Barista2.jpg">
-        <h1>
-            Mr Fairtrade
-        </h1>
-        <p>
-            Founder of Starbex.
-        </p>
-    </div>
-        <div class="col-md-1"></div>
-    <div class="col-md-2">
-        <img class="members" src="../media/images/Barista3.jpg">
-        <h1>
-            Miss Brewtiful
-        </h1>
-        <p>
-            Founder of Starbex.
-        </p>
-    </div>
-    <div class="col-md-2"></div>
+
+        <div class="col-sm-12">
+            <div>
+                <img class="members" src="../media/images/Barista1.jpg">
+            </div>
+            <div>
+                <h1>
+                    Bex Manning
+                </h1>
+                <p>
+                    Founder of <b>Starbex</b> and in charge of all the behind the scenes business. Ut enim ad
+                    minim veniam, quis nostrud exercitation ullamco laboris.
+                </p>
+            </div>
+        </div>
+
+        <div class="col-sm-12">
+            <div>
+                <img class="members" src="../media/images/Barista2.jpg">
+            </div>
+            <div>
+                <h1>
+                    Miss Brewtiful
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore. Ut enim ad minim veniam, quis nostrud.
+                </p>
+            </div>
+        </div>
+
+        <div class="col-sm-12">
+            <div>
+                <img class="members" src="../media/images/Barista3.jpg">
+            </div>
+            <div>
+                <h1>
+                    Mr Fairtrade
+                </h1>
+                <p>
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+        </div>
     </div>
 
-    <hr width="100%">
+    <div class="choices-coffee col-sm-12">
+        <div class="col-lg-4 text-center">
+            <h2>Coffees</h2>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
+        </div>
 
-    <p class="col-sm-12">Lorem blah blah blah </p>
+
+        <div class="col-lg-8 choices-coffee-info">
+            <ul class="nav nav-pills">
+                <li class="active"><a data-toggle="pill" href="#menu1"></a></li>
+                <li><a data-toggle="pill" href="#menu2"></a></li>
+                <li><a data-toggle="pill" href="#menu3"></a></li>
+                <li><a data-toggle="pill" href="#menu3"></a></li>
+                <li><a data-toggle="pill" href="#menu4"></a></li>
+                <li><a data-toggle="pill" href="#menu5"></a></li>
+                <li><a data-toggle="pill" href="#menu6"></a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div id="menu1" class="tab-pane fade in active">
+                    <h3>Menu 1</h3>
+                    <p>Some content.</p>
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    <h3>Menu 2</h3>
+                    <p>Some content in menu 1.</p>
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                    <h3>Menu 3</h3>
+                    <p>Some content in menu 2.</p>
+                </div>
+                <div id="menu4" class="tab-pane fade">
+                    <h3>Menu 4</h3>
+                    <p>Some content in menu 1.</p>
+                </div>
+                <div id="menu5" class="tab-pane fade">
+                    <h3>Menu 5</h3>
+                    <p>Some content in menu 2.</p>
+                </div>
+                <div id="menu6" class="tab-pane fade">
+                    <h3>Menu 6</h3>
+                    <p>Some content in menu 1.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="personal-coffee col-sm-12">
+        <div class="col-lg-4 text-center">
+            <h2>Personalise your Coffee</h2>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.</p>
+        </div>
+
+
+        <div class="col-lg-8">
+            <br>
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                                Step 1</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse in">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                                Step 2</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                                Step 3</a>
+                        </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
