--- a/templates/About.html
+++ b/templates/About.html
@@ -53,10 +53,8 @@
         <div class="col-lg-4 text-center">
             <h2>Coffees</h2>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <p>As well as various Teas, Hot Chocolates and Soft Drinks, we have a selection of
+                Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each month. </p>
         </div>
 
 
@@ -65,35 +63,39 @@
                 <li class="active"><a data-toggle="pill" href="#menu1"></a></li>
                 <li><a data-toggle="pill" href="#menu2"></a></li>
                 <li><a data-toggle="pill" href="#menu3"></a></li>
-                <li><a data-toggle="pill" href="#menu3"></a></li>
                 <li><a data-toggle="pill" href="#menu4"></a></li>
                 <li><a data-toggle="pill" href="#menu5"></a></li>
                 <li><a data-toggle="pill" href="#menu6"></a></li>
+                <li><a data-toggle="pill" href="#menu7"></a></li>
             </ul>
 
             <div class="tab-content">
                 <div id="menu1" class="tab-pane fade in active">
-                    <h3>Menu 1</h3>
+                    <h3>Latte</h3>
                     <p>Some content.</p>
                 </div>
                 <div id="menu2" class="tab-pane fade">
-                    <h3>Menu 2</h3>
+                    <h3>Cappuccino</h3>
                     <p>Some content in menu 1.</p>
                 </div>
                 <div id="menu3" class="tab-pane fade">
-                    <h3>Menu 3</h3>
+                    <h3>Mocha</h3>
                     <p>Some content in menu 2.</p>
                 </div>
                 <div id="menu4" class="tab-pane fade">
-                    <h3>Menu 4</h3>
+                    <h3>Americano</h3>
                     <p>Some content in menu 1.</p>
                 </div>
                 <div id="menu5" class="tab-pane fade">
-                    <h3>Menu 5</h3>
+                    <h3>Hot Chocolate</h3>
                     <p>Some content in menu 2.</p>
                 </div>
                 <div id="menu6" class="tab-pane fade">
-                    <h3>Menu 6</h3>
+                    <h3>Herbal Teas</h3>
+                    <p>Some content in menu 1.</p>
+                </div>
+                <div id="menu7" class="tab-pane fade">
+                    <h3>Breakfast Tea</h3>
                     <p>Some content in menu 1.</p>
                 </div>
             </div>
