--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,6 +169,36 @@ a:hover, a:focus {
 }
 
 /************ ABOUT *************/
+.About-title {
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(139, 69, 19, 0.7);
+    height: 85px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.About-title>h2 {
+    color: white;
+    font-family: 'Indie Flower', cursive;
+    font-size: 50px;
+    padding: 0 13% 0 3%;
+}
+
+.About-title>p {
+    text-align: right;
+    padding: 0 0 0 13%;
+    margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+    .About-title>p {
+        display: none;
+    }
+}
+
 img.members {
     width: 120px;
     height: 120px;
@@ -215,7 +245,7 @@ img.members {
 
 .personal-coffee {
     background-color: rgba(139, 69, 19, 0.4);
-    padding: 5px 0;
+    padding: 5px 15px;
     width: calc(100% + 30px);
     margin-left: -15px;
     color: white !important;
@@ -224,6 +254,22 @@ img.members {
 .personal-coffee > div > h2, .choices-coffee > div > h2 {
     color: white !important;
     font-family: 'Indie Flower', cursive;
+}
+
+.personal-coffee > .col-lg-8 {
+    padding: 0;
+}
+
+.personal-coffee > .col-lg-4, .choices-coffee > .col-lg-4 {
+    padding-right: 40px;
+    padding-left: 10px;
+}
+
+@media (max-width: 1200px) {
+    .personal-coffee > .col-lg-4 {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
 }
 
 .panel-body, .panel-heading {
@@ -297,16 +343,12 @@ img.members {
     border-radius: 100%;
 }
 
-.nav-pills {
+.nav-pills-coffees {
     display: flex;
     justify-content: center;
 }
 
-.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-    background-color: transparent;
-}
-
-.nav > li > a:hover, .nav > li > a:focus {
+.nav-pills-coffees > li > a:hover, .nav-pills-coffees > li > a:focus, .nav-pills-coffees > li.active > a, .nav-pills-coffees > li.active > a:hover, .nav-pills-coffees > li.active > a:focus {
     background-color: transparent;
 }
 
