--- a/templates/About.html
+++ b/templates/About.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
+    <div class="About-title"><p>Find out all about our team and the coffees we sell! Lorem ipsum dolor sit amet,
+        consectetur adipisicing elit, sed do eiusmod. </p>
+        <h2>About</h2></div>
+
+
     <div class="about-members">
 
         <div class="col-sm-12">
@@ -54,12 +59,13 @@
             <h2>Coffees</h2>
             <br>
             <p>As well as various Teas, Hot Chocolates and Soft Drinks, we have a selection of
-                Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each month. </p>
+                Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each month.
+            </p>
         </div>
 
 
         <div class="col-lg-8 choices-coffee-info">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills nav-pills-coffees">
                 <li class="active"><a data-toggle="pill" href="#menu1"></a></li>
                 <li><a data-toggle="pill" href="#menu2"></a></li>
                 <li><a data-toggle="pill" href="#menu3"></a></li>
@@ -87,15 +93,15 @@
                     <p>Some content in menu 1.</p>
                 </div>
                 <div id="menu5" class="tab-pane fade">
-                    <h3>Hot Chocolate</h3>
+                    <h3>Latte</h3>
                     <p>Some content in menu 2.</p>
                 </div>
                 <div id="menu6" class="tab-pane fade">
-                    <h3>Herbal Teas</h3>
+                    <h3>Latte</h3>
                     <p>Some content in menu 1.</p>
                 </div>
                 <div id="menu7" class="tab-pane fade">
-                    <h3>Breakfast Tea</h3>
+                    <h3>Latte</h3>
                     <p>Some content in menu 1.</p>
                 </div>
             </div>
@@ -106,10 +112,8 @@
         <div class="col-lg-4 text-center">
             <h2>Personalise your Coffee</h2>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</p>
+            <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
+                your coffee when you come into the store. <br> Click on each step!</p>
         </div>
 
 
