--- a/templates/About.html
+++ b/templates/About.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 
+    <div class="About-img">
+        <h2>Starbex</h2>
+    </div>
+
+
     <div class="About-title"><p>Find out all about our team and the coffees we sell! Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit, sed do eiusmod. </p>
-        <h2>About</h2></div>
+        consectetur adipisicing elit, sed do eiusmod. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.</p>
+    </div>
 
 
     <div class="about-members">
@@ -59,7 +67,8 @@
             <h2>Coffees</h2>
             <br>
             <p>As well as various Teas, Hot Chocolates and Soft Drinks, we have a selection of
-                Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each month.
+                Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each
+                month.
             </p>
         </div>
 
@@ -77,32 +86,32 @@
 
             <div class="tab-content">
                 <div id="menu1" class="tab-pane fade in active">
-                    <h3>Latte</h3>
-                    <p>Some content.</p>
+                    <h3>Cappuccino</h3>
+                    <img class="center-block" src="../media/images/Cappuccino.png">
                 </div>
                 <div id="menu2" class="tab-pane fade">
-                    <h3>Cappuccino</h3>
-                    <p>Some content in menu 1.</p>
+                    <h3>Latte</h3>
+                    <img class="center-block" src="../media/images/Latte.png">
                 </div>
                 <div id="menu3" class="tab-pane fade">
                     <h3>Mocha</h3>
-                    <p>Some content in menu 2.</p>
+                    <img class="center-block" src="../media/images/Mocha.png">
                 </div>
                 <div id="menu4" class="tab-pane fade">
                     <h3>Americano</h3>
-                    <p>Some content in menu 1.</p>
+                    <img class="center-block" src="../media/images/Americano.png">
                 </div>
                 <div id="menu5" class="tab-pane fade">
-                    <h3>Latte</h3>
-                    <p>Some content in menu 2.</p>
+                    <h3>Espresso</h3>
+                    <img class="center-block" src="../media/images/Espresso.png">
                 </div>
                 <div id="menu6" class="tab-pane fade">
-                    <h3>Latte</h3>
-                    <p>Some content in menu 1.</p>
+                    <h3>Macchiato</h3>
+                    <img class="center-block" src="../media/images/Macchiato.png">
                 </div>
                 <div id="menu7" class="tab-pane fade">
-                    <h3>Latte</h3>
-                    <p>Some content in menu 1.</p>
+                    <h3>Flat White</h3>
+                    <img class="center-block" src="../media/images/Flat-White.png">
                 </div>
             </div>
         </div>
