--- a/templates/About.html
+++ b/templates/About.html
@@ -86,91 +86,121 @@
 
             <div class="tab-content">
                 <div id="menu1" class="tab-pane fade in active">
-                    <h3>Cappuccino</h3>
-                    <img class="center-block" src="../media/images/Cappuccino.png">
+
+                    <div class="center-block"><p><b>Cappuccino</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Cappuccino.png">
+                    </div>
                 </div>
                 <div id="menu2" class="tab-pane fade">
-                    <h3>Latte</h3>
-                    <img class="center-block" src="../media/images/Latte.png">
+                    <div class="center-block"><p><b>Latte</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Latte.png">
+                    </div>
                 </div>
                 <div id="menu3" class="tab-pane fade">
-                    <h3>Mocha</h3>
-                    <img class="center-block" src="../media/images/Mocha.png">
+                    <div class="center-block"><p><b>Mocha</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Mocha.png">
+                    </div>
                 </div>
                 <div id="menu4" class="tab-pane fade">
-                    <h3>Americano</h3>
-                    <img class="center-block" src="../media/images/Americano.png">
+                    <div class="center-block"><p><b>Americano</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Americano.png">
+                    </div>
                 </div>
                 <div id="menu5" class="tab-pane fade">
-                    <h3>Espresso</h3>
-                    <img class="center-block" src="../media/images/Espresso.png">
+                    <div class="center-block"><p><b>Espresso</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Espresso.png">
+                    </div>
                 </div>
                 <div id="menu6" class="tab-pane fade">
-                    <h3>Macchiato</h3>
-                    <img class="center-block" src="../media/images/Macchiato.png">
+                    <div class="center-block"><p><b>Macchiato</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Macchiato.png">
+                    </div>
                 </div>
                 <div id="menu7" class="tab-pane fade">
-                    <h3>Flat White</h3>
-                    <img class="center-block" src="../media/images/Flat-White.png">
+                    <div class="center-block"><p><b>Flat White</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Flat-White.png">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="personal-coffee col-sm-12">
-        <div class="col-lg-4 text-center">
-            <h2>Personalise your Coffee</h2>
-            <br>
-            <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
-                your coffee when you come into the store. <br> Click on each step!</p>
-        </div>
+    <div class="col-lg-4 text-center">
+        <h2>Personalise your Coffee</h2>
+        <br>
+        <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
+            your coffee when you come into the store. <br> Click on each step!</p>
+    </div>
 
 
-        <div class="col-lg-8">
-            <br>
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                                Step 1</a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse in">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat.
+    <div class="col-lg-8">
+        <br>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                            Step 1</a>
+                    </h4>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body"><p><b>Choose your Coffee Bean</b> The most important ingredient is the
+                        Coffee bean, a delicacy that many coffee shops overlook. We stock beans with varying
+                        strengths and origins including Columbia and Guatemala.
+                    </p>
+                        <div class="text-center">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(5deg); -webkit-transform: rotate(5deg); transform: rotate(5deg);"
+                                 src="../media/images/Beans1.jpg">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(-4deg); -webkit-transform: rotate(-4deg); transform: rotate(-4deg);"
+                                 src="../media/images/Beans2.jpg">
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                                Step 2</a>
-                        </h4>
-                    </div>
-                    <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat.
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                            Step 2</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body text-center"><p><b>Choose your milk</b> We have a wide and interesting
+                        selection for
+                        all you lucky customers. We go as far as stocking Almond Soya Milk to Rice Milk... Holy Cow!
+                    </p>
+                        <div class="text-center">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(7deg); -webkit-transform: rotate(7deg); transform: rotate(7deg);"
+                                 src="../media/images/Milk1.jpg">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(-2deg); -webkit-transform: rotate(-2deg); transform: rotate(-2deg);"
+                                 src="../media/images/Milk2.jpg">
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                                Step 3</a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat.
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                            Step 3</a>
+                    </h4>
+                </div>
+                <div id="collapse3" class="panel-collapse collapse">
+                    <div class="panel-body"><p><b>Choose your Flavour</b> Vanilla syrup, Hazelnut syrup ...whatever you
+                        fancy! Finally add some flavour to your coffee to really cure that morning craving.
+                    </p>
+                        <div class="text-center">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(-5deg); -webkit-transform: rotate(-5deg); transform: rotate(-5deg);"
+                                 src="../media/images/Spice1.jpg">
+                            <img class="personalise-img"
+                                 style="-ms-transform: rotate(2deg); -webkit-transform: rotate(2deg); transform: rotate(2deg);"
+                                 src="../media/images/Spice2.jpg">
                         </div>
                     </div>
                 </div>
