--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -13,7 +13,8 @@
 </p>
 
 <form method="get" action="/results/" class="navbar-form text-center blogsearch">
-    <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder=" Search...">
+    <i class="glyphicon glyphicon-search"></i>
+    <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder=" Search Here...">
  </form>
 
    {% load bootstrap_tags %}
