--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,12 @@
     <div class="Profile-img">
             <div class="Coffees-left">
                 <div class="num-coffees">
-                    <div>23</div>
+                    {% if number_purchases != 0 %}
+                    <div>{{ name.0 }}{{ name.1 }}</div>
+                    {% endif %}
+                    {% if number_purchases == 0 %}
+                    <div>0</div>
+                    {% endif %}
                 </div>
             </div>
             <h2>Star-{{ user.first_name }}</h2>
@@ -16,7 +21,12 @@
         <p>You are logged in as {{ user.email }} </p>
         <p>Welcome {{ user.first_name }} {{ user.last_name }} to your Starbex profile</p>
 
-        <h2>23 Coffees left for the month</h2>
+        {% if number_purchases != 0 %}
+        <h2>Current subscription - {{ name }}</h2>
+        {% endif %}
+        {% if number_purchases == 0 %}
+        <h2>You aren't currently subscribed - click below to start</h2>
+        {% endif %}
         <a href="/coffees/" class="btn btn-primary topup-btn">Top up your coffees</a>
 
         <p>Come visit soon, We can't wait to see you!</p>
