--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -58,13 +58,18 @@
     <!--End Modal-->
 
     <hr>
+    {% if subscription_valid == True %}
+        <p class="text-center text-capitalize"><u><b>Currently subscribed to {{ name }} <br></b></u> Click <b><a href="#">here</a></b> to cancel subscription</p>
+    {% endif %}
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>Name</th>
                 <th class="Coffee-description">Description</th>
                 <th>Price</th>
-                <th class="Subscribe-label">Subscribe</th>
+                {% if subscription_valid == False %}
+                    <th class="Subscribe-label">Subscribe</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -73,7 +78,10 @@
                     <td>{{ coffee.name }}</td>
                     <td class="Coffee-description">{{ coffee.description }}</td>
                     <td>£{{ coffee.price }}</td>
+
+                    {% if subscription_valid == False %}
                     <td class="Subscribe-paypal">{% paypal_form_for coffee user %}</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </tbody>
