--- a/static/css/style.css
+++ b/static/css/style.css
@@ -641,19 +641,18 @@ input[type=text], textarea {
       outline: none;
       padding: 3px 3px 3px 3px;
       margin: 5px 3px 3px 3px;
-      border: 0px;
-    background-color: rgba(220, 220, 220, 0.5);
-    color: white;
+      border: solid 1px rgba(51, 51, 51, 0.7);
+      color: #555555;
 }
 
 input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; } /* Firefox 18- */
 input:focus::-moz-placeholder { color:transparent; } /* Firefox 19+ */
 input:focus:-ms-input-placeholder { color:transparent; }
-input::-webkit-input-placeholder { color:white; }
-input:-moz-placeholder { color:white; } /* Firefox 18- */
-input::-moz-placeholder { color:white; } /* Firefox 19+ */
-input:-ms-input-placeholder { color:white; }
+input::-webkit-input-placeholder { color: rgba(87, 87, 87, 0.7); }
+input:-moz-placeholder { color:rgba(87, 87, 87, 0.7); } /* Firefox 18- */
+input::-moz-placeholder { color:rgba(87, 87, 87, 0.7); } /* Firefox 19+ */
+input:-ms-input-placeholder { color:rgba(87, 87, 87, 0.7); }
 
 input[type=text]:focus, textarea:focus {
   box-shadow: 0 0 5px rgba(132, 132, 132, 0.71);
